# drat

./: .gitignore  Cargo.toml  LICENSE  README.md
chop/: Cargo.toml  README.md
chop/src/: main.rs
examples/: compressed.rs  filter_and_merge.rs  simple.rs  split.rs
examples/files/: hundred.dc
src/: args.rs  chopper_cli.rs  cli_app.rs  collate.rs  command.rs  config.rs  drat_cli.rs  drat_manual_example.rs  error.rs  file_record.rs  lib.rs  main.rs  read.rs  read_filter.rs  result.rs  source_config.rs
src/chopper/: chopper.rs  data_graph.rs  driver.rs  error.rs  header_graph.rs  mod.rs  sink.rs  types.rs
src/cli/: util.rs
src/decompress/: crc32.rs  decompress.rs  lz4_jblock.rs  lz4_jblock_decompress.rs  lzf.rs  mod.rs  zip.rs  zst.rs
src/dr/: data_graph.rs  dr.rs  graph.rs  header_graph.rs  mod.rs  types.rs
src/driver/: driver.rs  merge_join.rs  mod.rs  source_row_buffer.rs  split.rs
src/filter/: column_filter_delete_col.rs  mod.rs  row_filter_equal_value.rs  row_filter_greater_value.rs
src/input/: file.rs  files_in_dir_provider.rs  http.rs  input.rs  input_factory.rs  mod.rs  serial_multi_file_provider.rs  single_file.rs
src/process/: collate.rs  command.rs  mod.rs  read.rs
src/process/driver/: file_record.rs  filter.rs  input_driver.rs  mod.rs  single_file_record.rs  single_input_driver.rs
src/process/filters/: column_filter_delete_col.rs  mod.rs  row_filter_equal_value.rs  row_filter_greater_value.rs
src/read/: csv_reader.rs  dc_reader.rs  dr.rs  mod.rs  types.rs
src/serde/: de_error.rs  de_field_value.rs  de_row.rs  de_source.rs  mod.rs  ser_byte_buf_element.rs  ser_data_sink.rs  ser_error.rs  ser_field_type.rs  ser_field_value.rs  ser_header.rs  ser_header_sink.rs  ser_row.rs  ser_u64_timestamp.rs  ser_util.rs
src/serde/de/: error.rs  field_value.rs  mod.rs  row.rs  source.rs  util.rs
src/serde/ser/: byte_buf_element.rs  error.rs  (+4 more)
src/source/: csv_config.rs  csv_configs.rs  csv_factory.rs  csv_input_config.rs  csv_source.rs  csv_source_factory.rs  csv_timestamp.rs  csv_timestamp_config.rs  csv_timestamp_util.rs  dc_factory.rs  dc_source.rs  dc_source_factory.rs  decompress.rs  mod.rs  multi_file_source.rs  source.rs  source_factory.rs
src/transport/: dir_read.rs  file.rs  http.rs  mod.rs  transport_factory.rs
src/util/: csv_util.rs  dc_factory.rs  dc_util.rs  file.rs  mod.rs  path.rs  preview.rs  reader.rs  remove_multiple.rs  timestamp_units.rs  timestamp_util.rs  tz.rs
src/write/: asserting_sink.rs  csv_output_config.rs  csv_sink.rs  dc_sink.rs  factory.rs  mod.rs  sink.rs  vec_sink.rs
tests/: test_compressed.rs  test_decompress.rs  test_filter_and_merge.rs  test_filters.rs  test_hide_timestamp_column.rs  test_merge.rs  test_multi_file.rs  test_multi_row_output.rs  test_row_filter_equal.rs  test_split.rs  test_split_merge_complex.rs  test_split_merge_simple.rs  test_timestamp.rs
tests/input/: hundred.dc  time_city.csv  time_city.dc  time_city_spaces
tests/output/: output_time_city.csv  test_filters.csv  test_hide_timestamp_column_1.csv  test_merge.csv  test_split_2.csv  test_split_merge_complex_chain7.csv  test_timestamp.csv
tests/reference/: filters.csv  merge.csv  output_time_city.csv  test_compressed.csv  test_filter_and_merge.csv  test_filters.csv  test_hide_timestamp_column_2.csv  test_multi_row_output.csv
util/dcgen/: .gitignore  CMakeLists.txt  Cargo.toml
util/dcgen/src/: main.rs
util/infistream/: Cargo.toml
(+43 files in other folders)
