[package]
name = "chopper"
version = "0.0.2"
authors = ["Xinyun Wu <xin@snaar.net>", "Serguei Narojnyi <snaar@snaar.net>"]
edition = "2018"
repository = "https://github.com/octoske/chopper"
description = "Chopper is a simple streaming time series inspection and manipulation tool."
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["cli", "io", "data", "streaming", "csv"]
categories = ["command-line-utilities", "encoding"]
exclude = [
	".idea/*",
	"examples/*",
	"tests/*",
	]

[dependencies]
backtrace = "0.3"
byteorder = "1"
chrono = "0.4"
chrono-tz = "0.5"
clap = "2"
csv = "1"
dtoa = "0.4"
flate2 = "1"
lazy_static = "1"
lz-fear = "0.1"
ruzstd = "0.2"
ureq = { version = "1.5", features = ["charset"] }

[lib]
name = "chopper_lib"
path = "src/lib.rs"

[[bin]]
name = "chop"
path = "src/main.rs"

[dev-dependencies]
same-file = "1"
