[package]
name = "chopper"
version = "0.0.5"
authors = ["Xinyun Wu <xin@snaar.net>", "Serguei Narojnyi <snaar@snaar.net>"]
edition = "2018"
repository = "https://github.com/octoske/chopper"
description = "Chopper is a streaming time series manipulation framework. Cli frontend is provided via chop crate."
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["io", "data", "streaming", "csv"]
exclude = [
	".idea/*",
	"chop/*",
	"examples/*",
	"tests/*",
]

[dependencies]
backtrace = "0.3"
byteorder = "1"
chrono = "0.4"
chrono-tz = "0.5"
clap = "2"
csv = "1"
dtoa = "0.4"
flate2 = "1"
lazy_static = "1"
lz-fear = "0.1"
paku = "0.0.1"
ruzstd = "0.2"
ureq = { version = "1", features = ["charset"] }

[dev-dependencies]
same-file = "1"
